Add output tests to Makefile and clang++ support, silence clang++ warnings.

--- a/.neomake_cpp_config
+++ b/.neomake_cpp_config
@@ -1,4 +1,5 @@
 -DCORRECTNESS_TEST
--mavx
 -fopenmp
 -isystem/cm/shared/apps/intel/composer_xe/2015.5.223/mkl/include/
+-Wno-shadow
+-Wno-disabled-macro-expansion
